bugfix: fixed broken url encoding